src/components/QuranReader/QuranReader.module.scss
@use 'src/styles/constants';
@use 'src/styles/breakpoints';
@use 'src/styles/utility';

// Padding clears fixed elements; ChapterHeader's margin provides the 20px visual gap
$quran-reader-padding: var(--navbar-height);
$quran-reader-padding-mobile: var(--navbar-height);
$virtual-scrolling-height-bandage: calc(
  4 * var(--spacing-mega)
); // library react-virtuoso's inline `height` is less than the required `height`.
// so we're adding a little extra padding at the bottom to make sure the other components are visible.
// for example for EndOfScrollingButton component

.infiniteScroll {
  @include utility.quranContainer;
  margin-block-start: 0;
  margin-block-end: 0;
  margin-inline: 0;
  inline-size: 100%;
}

.readingView {
  min-block-size: 100vh;
}

.loading {
  text-align: center;
  max-inline-size: 80%;
  margin-block-start: var(--spacing-medium);
  margin-block-end: var(--spacing-medium);
  margin-inline-start: auto;
  margin-inline-end: auto;
}

.container {
  @include breakpoints.smallerThanTablet {
    padding-block-start: $quran-reader-padding-mobile;
  }
  padding-block-start: $quran-reader-padding;
  padding-inline: var(--spacing-medium2-px);
  background-color: var(--color-background-elevated-new);
  background-image: var(--color-background-lighten);
  padding-block-end: $virtual-scrolling-height-bandage;
  @include breakpoints.tablet {
    transition: var(--transition-regular);
    margin-inline-end: 0;
  }

  @include breakpoints.smallerThanTablet {
    // TODO: we should add the banner height here if it's shown
    // padding-block-start: calc($quran-reader-padding + var(--mobile-reading-mode-tabs-height) + var(--banner-height));
    padding-block-start: calc($quran-reader-padding + var(--mobile-reading-mode-tabs-height));
  }
}

.translationView {
  padding-block-end: var(--spacing-xxlarge-px);

  @include breakpoints.smallerThanTablet {
    padding-block-end: var(--spacing-medium2-px);
  }
}

.withVisibleSideBar {
  @include breakpoints.tablet {
    margin-inline-end: constants.$notes-side-bar-desktop-width;
  }
}

.withSidebarNavigationOpenOrAuto {
  @include breakpoints.tablet {
    margin-inline-start: calc(10 * var(--spacing-mega));
  }
}

.playButton {
  display: flex;
  justify-content: center;
}

